--- a/pom.xml
+++ b/pom.xml
@@ -53,10 +53,39 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.4.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.aventstack/chaintest-testng -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>chaintest-testng</artifactId>
+    <version>1.0.12</version>
+</dependency>
 
 	</dependencies>
 
 	<build>
-
+		<plugins>
+ 			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-compiler-plugin</artifactId>
+        		<version>3.14.0</version>
+        		<configuration>
+        			<source>11</source>
+        			<target>11</target>
+        		</configuration>
+      		</plugin>
+      		
+  			<plugin>
+        		<groupId>org.apache.maven.plugins</groupId>
+        		<artifactId>maven-surefire-plugin</artifactId>
+        		<version>3.5.3</version>
+        		<configuration>
+          			<suiteXmlFiles>
+          			<!--forkCount>3</forkCount-->
+          			<!--reuseForks>true</reuseForks-->
+            			<suiteXmlFile>./src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>
+          			</suiteXmlFiles>
+        		</configuration>
+      		</plugin>
+		</plugins>
 	</build>
 </project>
