--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 #https://github.com/github/gitignore/blob/main/Maven.gitignore
 target/
+allure-results/
+logs/
 test-output/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -17,3 +19,4 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+Note.txt
