--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ target/
 allure-results/
 logs/
 test-output/
+buil/
+screenshots/
+screenshot/
+####################
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -10,7 +14,12 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
+####################
 .mvn/timing.properties
+.settings/
+.mvn/
+.classpath
+.project
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
