--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,72 @@
 #https://github.com/github/gitignore/blob/main/Maven.gitignore
-target/
 allure-results/
-logs/
-test-output/
-buil/
 screenshots/
 screenshot/
-####################
+test-output/
+build/
+logs/
+application.log
+#
+##############################
+## Java
+##############################
+.mtj.tmp/
+*.class
+*.jar
+*.war
+*.ear
+*.nar
+hs_err_pid*
+*.log
+#
+##############################
+## Eclipse
+##############################
+.settings/
+bin/
+tmp/
+.metadata
+.classpath
+.project
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.loadpath
+.factorypath
+##############################
+## Maven
+##############################
+target/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
+pom.xml.bak
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
-####################
 .mvn/timing.properties
-.settings/
-.mvn/
-.classpath
-.project
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
-
+.mvn/
+##############################
 # Eclipse m2e generated files
 # Eclipse Core
-.project
 # JDT-specific (Eclipse Java Development Tools)
-.classpath
+Java.gitignore
 Note.txt
+##############################
+## IntelliJ
+##############################
+out/
+.idea/
+.idea_modules/
+*.iml
+*.ipr
+*.iws
+
+## OS X
+##############################
+.DS_Store
