added configuration for RemoteWebDriver

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -8,3 +8,7 @@ headless = true
 incognito = true
 !highlighting the driver on the elements
 highlight = true
+
+remote = false
+huburl = https://localhost:4444/wd/hub  
+!change to http to avoid security blocek preventing the test to run
