--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<maven.compiler.target>17</maven.compiler.target>
 		<allure.version>2.24.0</allure.version>
 		<aspectj.version>1.9.20.1</aspectj.version>
+		<suiteXmlFile>testng_regression.xml</suiteXmlFile>
 	</properties>
 
 	<dependencyManagement>
@@ -117,8 +118,8 @@
 					<suiteXmlFiles>
 						<!--forkCount>3</forkCount-->
 						<!--reuseForks>true</reuseForks-->
-						<suiteXmlFile>
-							./src/test/resources/testrunners/testng_regression.xml</suiteXmlFile>
+						<!--suiteXmlFile>./src/test/resources/testrunners/testng_regression.xml</suiteXmlFile-->
+						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>	
 					</suiteXmlFiles>
 					<argLine>
 						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
