--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -4,11 +4,11 @@ username =march2024@open.com
 password= Selenium@12345
 
 !Toggle options
-headless = true
+headless = false
 incognito = true
 !highlighting the driver on the elements
 highlight = true
 
-remote = false
-huburl = https://localhost:4444/wd/hub  
+remote = true
+huburl = http://localhost:4444/wd/hub  
 !change to http to avoid security blocek preventing the test to run
