--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -5,7 +5,7 @@ password= Selenium@12345
 
 !Toggle options
 headless = false
-incognito = true
+incognito = false
 !highlighting the driver on the elements
 highlight = true
 
