--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,5 +1,5 @@
 browser = chrome
-url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
+url = http://naveenautomationlabs.com/opencart/index.php?route=account/login
 username =march2024@open.com
 password= Selenium@12345
 
