--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -10,7 +10,7 @@ incognito = false
 highlight = true
 
 remote = true
-huburl = http://localhost:4444/wd/hub
+huburl = http://10.40.20.31:5555/wd/hub
 ! selenoid Grid with selenoid hub should run @ huburl = http://localhost:8080/wd/hub
 ! selenium Grid with selenium hub should run @ huburl = http://localhost:4444/wd/hub
 !change to http to avoid security blocek preventing the test to run
